Issue #17: Updated following libraries overrides `(s)css` styles since Sass Framework update - Alignment classes - Float clearing - Invisible content & Screenreaders

--- a/css/components/utilities/clearfix.css
+++ b/css/components/utilities/clearfix.css
@@ -1,1 +1,3 @@
-/*! Compiled SASS file | Do NOT modify from here !*/.clearfix:after{content:'';display:table;clear:both}
+.clearfix:after{content:"";display:table;clear:both}
+
+/*! Compiled SASS file | Do NOT modify from here !*/
